{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 22,
  "lineage": "845c357e-7a7f-c91f-f6ff-ce4ff1cbe668",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "smkt_igw_ansible",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924309154876:internet-gateway/igw-0aa6f28ca0d060c55",
            "id": "igw-0aa6f28ca0d060c55",
            "owner_id": "924309154876",
            "tags": {
              "Name": "smkt_igw_ansible"
            },
            "tags_all": {
              "Name": "smkt_igw_ansible"
            },
            "vpc_id": "vpc-0c7f8213cba0715ea"
          },
          "dependencies": [
            "aws_vpc.skmt_vpc_ansible"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "skmt_route_1_ansible",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0aa6f28ca0d060c55",
            "id": "r-rtb-071da1858c15c83021080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-071da1858c15c8302",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.skmt_route_table_ansible",
            "aws_vpc.skmt_vpc_ansible",
            "aws_internet_gateway.smkt_igw_ansible"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "skmt_route_table_ansible",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924309154876:route-table/rtb-071da1858c15c8302",
            "id": "rtb-071da1858c15c8302",
            "owner_id": "924309154876",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aa6f28ca0d060c55",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "skmt_route_table_ansible"
            },
            "tags_all": {
              "Name": "skmt_route_table_ansible"
            },
            "vpc_id": "vpc-0c7f8213cba0715ea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.skmt_vpc_ansible"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b0d161e5fd1c85e",
            "route_table_id": "rtb-071da1858c15c8302",
            "subnet_id": "subnet-0fed33266a0f7a31f"
          },
          "dependencies": [
            "aws_route_table.skmt_route_table_ansible",
            "aws_subnet.skmt_public_subnet_ansible",
            "aws_vpc.skmt_vpc_ansible"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "skmt_sg_ansible",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924309154876:security-group/sg-009d3621dfb612514",
            "description": "Security Group for SKMT VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-009d3621dfb612514",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1000
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "skmt_sg_ansible",
            "name_prefix": "",
            "owner_id": "924309154876",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "skmt_sg_ansible"
            },
            "tags_all": {
              "Name": "skmt_sg_ansible"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7f8213cba0715ea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.skmt_vpc_ansible"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "skmt_sg_rule_1_ansible",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.1.0/24"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2753388592",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-009d3621dfb612514",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.skmt_sg_ansible",
            "aws_subnet.skmt_public_subnet_ansible",
            "aws_vpc.skmt_vpc_ansible"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "skmt_sg_rule_2_ansible",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 1000,
            "id": "sgrule-123545055",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-009d3621dfb612514",
            "self": false,
            "source_security_group_id": null,
            "to_port": 1000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.skmt_sg_ansible",
            "aws_vpc.skmt_vpc_ansible"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "skmt_sg_rule_3_ansible",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-775590822",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-009d3621dfb612514",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.skmt_sg_ansible",
            "aws_vpc.skmt_vpc_ansible"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "skmt_sg_rule_4_ansible",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 7681,
            "id": "sgrule-2913444757",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-009d3621dfb612514",
            "self": false,
            "source_security_group_id": null,
            "to_port": 7687,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.skmt_sg_ansible"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "skmt_public_subnet_ansible",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924309154876:subnet/subnet-0fed33266a0f7a31f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0fed33266a0f7a31f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "924309154876",
            "tags": {
              "Name": "skmt_public_subnet"
            },
            "tags_all": {
              "Name": "skmt_public_subnet"
            },
            "vpc_id": "vpc-0c7f8213cba0715ea"
          },
          "dependencies": [
            "aws_vpc.skmt_vpc_ansible"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "skmt_vpc_ansible",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924309154876:vpc/vpc-0c7f8213cba0715ea",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0707a80e9f65a2043",
            "default_route_table_id": "rtb-0275d22d6b606b92b",
            "default_security_group_id": "sg-014319bd901ff5543",
            "dhcp_options_id": "dopt-64d3ca1e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c7f8213cba0715ea",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0275d22d6b606b92b",
            "owner_id": "924309154876",
            "tags": {
              "Name": "skmt_vpc_ansible"
            },
            "tags_all": {
              "Name": "skmt_vpc_ansible"
            }
          }
        }
      ]
    }
  ]
}